Bug 431265 - Window rule "Ignore requested geometry" has unclear effect
Summary: Window rule "Ignore requested geometry" has unclear effect
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinrules (other bugs)
Version First Reported In: 5.20.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-01-07 15:44 UTC by Till Schäfer
Modified: 2023-04-11 18:22 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Till Schäfer 2021-01-07 15:44:06 UTC
The window rule "Ignore requested geometry" is described in its title text to ignore window positions. However, AFAIK this rule also affects the size of a window. Furthermore, I would expect the maximized state to fall under "geometry", but according to bug Bug 401103 it does not. 


Thus, I propose 

a) To clarify the affected window rules by this setting my specifying them explicitly
b) To extend the rule to effect the maximized state as well.
Comment 1 S. Christian Collins 2021-02-18 02:36:26 UTC
The "Ignore requested geometry" rule also affects which screen a window opens on. For example, I had a window rule that Dolphin should always open on my second monitor, but this rule stopped working after upgrading to KDE Frameworks 5.79.0. After adding "Ignore requested geometry" to the rules, Dolphin now honors the screen placement rule.
Comment 2 rejedai 2022-02-01 08:08:41 UTC
I have such a problem only in the Wayland session. There are no such problems in x11 or with QT_QPA_PLATFORM=xcb.
Comment 3 Bug Janitor Service 2023-04-11 17:50:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3963
Comment 4 Ismael Asensio 2023-04-11 18:22:07 UTC
Git commit d4d5e3b7a896a69b7f8c02cd3b836fc643cd2d9a by Ismael Asensio.
Committed on 11/04/2023 at 18:03.
Pushed by iasensio into branch 'master'.

kcm/rules: Improve "Ignore Geometry" property UI

This property is not used on Wayland because windows are
already not allowed to set their own geometry, so let's
hide it from the UI.

Also update the tooltip to explicitly state which properties
the `Ignore Geometry` property does affect on X11
FIXED-IN: 6.0

M  +18   -9    src/kcms/rules/rulesmodel.cpp

https://invent.kde.org/plasma/kwin/commit/d4d5e3b7a896a69b7f8c02cd3b836fc643cd2d9a